--- a/rickroll.html
+++ b/rickroll.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>You Just Got Rick Rolled</title>
-  </head>
-  <body>
-    <audio controls hidden id = "roll">
-      <source src="roll.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
-    <img src="rickroll-roll.gif">
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>You've been rickrolled</title>
+</head>
+<body>
+  <h1><center>You've been Rick Rolled</center></h1>
+  <center>
+  <video autoplay loop >
+    <source src="rickrolled.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  </center>
+</body>
 </html>
