--- a/rickroll.html
+++ b/rickroll.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>You've been rickrolled</title>
+  <title>BSDK</title>
 </head>
 <body>
-  <h1><center>You've been Rick Rolled</center></h1>
   <center>
   <video autoplay loop >
-    <source src="rickrolled.mp4" type="video/mp4">
+    <source src="bsdk.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   </center>
