--- a/index.html
+++ b/index.html
@@ -4,60 +4,59 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Important PYP100 Viva Questions</title>
+  <title>Important Viva Questions asked in Previous Years PYP100</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  PYP100 Important Viva Questions asked in Previous Years
+  <b>PYP100 Important Viva Questions asked in previous years</b>
   <br>
   <br>
 
-  Optics:
+  <b>Optics:</b>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 1
+  <a href="bsd.html" target="_self" title="Experiment 1 important Viva Questions">
+    Experiment 1
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 2
+  <a href="bsd.html" target="_self" title="Experiment 2 important Viva Questions">
+    Experiment 2
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 3
+  <a href="bsd.html" target="_self" title="Experiment 3 important Viva Questions">
+    Experiment 3
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 4
+  <a href="bsd.html" target="_self" title="Experiment 4 important Viva Questions">
+    Experiment 4
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 5
-    </a>
-  <br>
-  <br>  
-  Electrical:
-  <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 1
+  <a href="bsd.html" target="_self" title="Experiment 5 important Viva Questions">
+    Experiment 5
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 2
+  <br>
+  <b>Electrical:</b>
+  <br>
+  <a href="rickroll.html" target="_self" title="Experiment 1 important Viva Questions">
+    Experiment 1
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 3
-    </a>
-  <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 4
+  <a href="rickroll.html" target="_self" title="Experiment 2 important Viva Questions">
+    Experiment 2
   </a>
   <br>
-  <a href="rickroll.html" target ="_self" title ="Experiment 1 important Viva Questions">
-  Experiment 5
-    </a>
-
+  <a href="rickroll.html" target="_self" title="Experiment 3 important Viva Questions">
+    Experiment 3
+  </a>
+  <br>
+  <a href="rickroll.html" target="_self" title="Experiment 4 important Viva Questions">
+    Experiment 4
+  </a>
+  <br>
+  <a href="rickroll.html" target="_self" title="Experiment 5 important Viva Questions">
+    Experiment 5
+  </a>
   <script src="script.js"></script>
 </body>
 
